@@ -66,7 +66,7 @@ dist-hook:
 		done; \
 	fi
 
-distclean-hook:
+distclean-local:
 	@if [ "x$(PO4A_LINGUA)" = xyes ]; then \
-		-rm -rf man1 man5 man8; \
+		rm -rf man1 man5 man8; \
 	fi
