@@ -1,3 +1,9 @@
+Mon Nov 15 22:22:47 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* man/Rules.man (distclean-hook): Rename to ...
+	  (distclean-local): ... this, and fix syntax so that it actually
+	  works.
+
 Mon Nov 15 21:38:04 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (local_man_loop): Simplify and improve code to make a
